fix: adaptability of wrap

--- a/src/components/view/page/profile-view/user-field/styles/wrap-style.module.scss
+++ b/src/components/view/page/profile-view/user-field/styles/wrap-style.module.scss
@@ -1,8 +1,9 @@
 @import '../../../../../../style/helper';
 
 .wrap {
+  margin-top: 1rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
